vandam-server/polymer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polymer
  namespace: vandam-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polymer
  template:
    metadata:
      labels:
        app: polymer
    spec:
      securityContext:
        fsGroup: 8675
      containers:
      - name: polymer
        image: ghcr.io/sweeneytr/polymer:main
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: data-pv
          mountPath: /libraries
      volumes:
      - name: data-pv
        persistentVolumeClaim:
          claimName: polymer-data
