vandam-server/polymer/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polymer-web
  namespace: vandam-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polymer-web
  template:
    metadata:
      labels:
        app: polymer-web
    spec:
      containers:
      - name: polymer-web
        image: ghcr.io/sweeneytr/polymer-web:edge
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
