vandam-server/polymer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polymer
  namespace: vandam-server
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: polymer
