vandam-server/polymer/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polymer
  namespace: vandam-server
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: polymer.wavecat.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: polymer-web
            port:
              name: http
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: polymer
            port:
              name: http
  tls:
  - hosts:
    - polymer.wavecat.net
    secretName: polymer.wavecat.net
